fix: dark mode on sodebar

--- a/src/components/burger/ui/Burger.css
+++ b/src/components/burger/ui/Burger.css
@@ -1,4 +1,4 @@
-.burger {
+.burger button {
   display: flex;
   flex-flow: column;
   justify-content: space-between;
@@ -23,7 +23,7 @@
   right: -300px;
   width: 300px;
   height: 100vh;
-  background-color: #f2f2f2;
+  background-color: var(--primary-background-color);
   box-shadow: 0 .25rem .5rem rgba(0, 0, 0, 0.25);
   transition: right 0.3s ease-in-out;
 }
@@ -61,4 +61,13 @@
 .overlay.show {
   display: block;
   opacity: 1;
+}
+
+.burger.dark, .sidebar.dark {
+  background-color: var(--secondary-background-color);
+  color: var(--secondary-text-color);
+}
+
+.burger.dark span {
+  background: var(--primary-background-color);
 }
